# Hyper-AMX

./: .gitignore  AGENTS.md  AMXGuide.md  CLAUDE.md  CMakeLists.txt  ModelSpec.md  NUMA.md  NecessaryOperations.md  NumaTensorParallel.md  README.md  TODO.md  build.sh  main.cpp  numatest.cpp  test_layoutalg.cpp
Documentation/: AVX512.md  CPPModules.md  Coroutines.md  ModernCPPGuide.md  TensorParallel.md
benchmarks/: kernel_benchmarks.cppm  numa_add_bench.cppm  numa_matmul_bench.cppm  quantization_benchmark.cppm
modules/: amx_buffer.cppm  amx_gemms.cppm  avx512.cppm  kernel.cppm  layout.cppm  layoutalg.cppm  matmul.cppm  modernlayout.cppm  modernmatmul.cppm  modernnuma.cppm  moderntensor.cppm  numa.cppm  numaaware.cppm  old_amx_gemms.cppm  old_avx512.cppm  old_moe.cppm  old_numa.cppm  old_tensor.cppm  quantization.cpp  quantization.cppm  tensor.cppm  tensor_utils.cppm
old_modules/: old_amx_gemms.cppm  old_avx512.cppm  old_moe.cppm  old_tensor.cppm
old_tests/: moe_tests.cppm  numa_tests.cppm  tensor_tests.cppm
tests/: kernel_benchmarks.cppm  kernel_tests.cppm  matmul_correctness.cppm  modern_matmul_correctness.cppm  numa_matmul_bench.cppm  numa_matmul_test.cppm  numa_tests.cppm  qtensor.cppm  quantization_benchmark.cppm  quantization_test.cppm  tensor_tests.cppm
